examples-generated/namespaced/network/v1alpha1/gateway.yaml
apiVersion: network.upcloud.m.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: network/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: this
  name: this
  namespace: upbound-system
spec:
  forProvider:
    features:
    - nat
    labels:
      managed-by: terraform
    name: gateway-example-gw
    plan: development
    router:
    - idSelector:
        matchLabels:
          testing.upbound.io/example-name: this
    zone: pl-waw1
